# reversi-cpp

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: board.hh  reversi.cc  reversi.hh
src/com/: 01.hh
src/lib/: board.hh  com01.hh  players.hh
src/lib/coms/: com01.hh  com02.hh
src/lib/evaluators/: 01.hh  02.hh  03.hh  MAX.hh
test/: CMakeLists.txt
test/test_sources/: eval2.cc
tools/: board_generator.py
